@@ -1,33 +1,32 @@
 import java.io.IOException;
 
 public class ZFSSnapshotManager {
+    private final String dataset;
 
-    private final String datasetName; // ZFS dataset name (e.g., "poolname/yourdataset")
-
-    public ZFSSnapshotManager(String datasetName) {
-        this.datasetName = datasetName;
+    public ZFSSnapshotManager(String dataset) {
+        this.dataset = dataset;
     }
 
     public void createSnapshot(String snapshotName) throws IOException, InterruptedException {
-        String command = "zfs snapshot " + datasetName + "@" + snapshotName;
-        executeCommand(command);
+        executeCommand("zfs snapshot " + dataset + "@" + snapshotName);
+        System.out.println("Created snapshot: " + dataset + "@" + snapshotName);
     }
 
     public void rollbackSnapshot(String snapshotName) throws IOException, InterruptedException {
-        String command = "zfs rollback " + datasetName + "@" + snapshotName;
-        executeCommand(command);
+        executeCommand("zfs rollback " + dataset + "@" + snapshotName);
+        System.out.println("Rolled back to snapshot: " + dataset + "@" + snapshotName);
     }
 
     public void deleteSnapshot(String snapshotName) throws IOException, InterruptedException {
-        String command = "zfs destroy " + datasetName + "@" + snapshotName;
-        executeCommand(command);
+        executeCommand("zfs destroy " + dataset + "@" + snapshotName);
+        System.out.println("Deleted snapshot: " + dataset + "@" + snapshotName);
     }
 
     private void executeCommand(String command) throws IOException, InterruptedException {
-        Process process = new ProcessBuilder("bash", "-c", command).start();
-        int exitCode = process.waitFor();
-        if (exitCode != 0) {
-            throw new IOException("Command failed: " + command);
+        Process process = Runtime.getRuntime().exec(new String[]{"bash", "-c", "sudo " + command});
+        process.waitFor();
+        if (process.exitValue() != 0) {
+            throw new IOException("ZFS command failed: " + command);
         }
     }
 }
